// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputWithPills/> render with default/required props 1`] = `
<DocumentFragment>
  <div
    class="input-with-pills"
  >
    <input
      class="input-with-pills__input"
      data-cy=""
    />
  </div>
</DocumentFragment>
`;

exports[`<InputWithPills/> render with optional/required props 1`] = `
<DocumentFragment>
  <div
    class="input-with-pills"
  >
    <span
      class="pill"
      data-cy="optProps.data-cy-pill-0"
    >
      props.value[0].label
    </span>
    <input
      class="input-with-pills__input"
      data-cy="optProps.data-cy"
    />
  </div>
</DocumentFragment>
`;
